# CASTOR

./: .gitignore  README.md  build.spec  pyproject.toml
.github/workflows/: build.yml
docs/: ATBD.md  api_spec.md  architecture.md
src/: physics.py
src/castor/: batch_calculator.py  calculator.py  example.py  moon.py  physics.py  schema.py
src/castorGUI/: app.py
src/castorGUI/data/: presets.json
src/castorGUI/frontend/: index.html
src/castorGUI/frontend/css/: style.css
src/castorGUI/frontend/js/: script.js
src/castor_gui/: app.py
src/castor_gui/frontend/: index.html
src/castor_gui/frontend/js/: script.js
tests/: test_batch_calculator.py  test_calculator.py  test_moon.py  test_physics.py  test_schema.py
