[project]
name = "castor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astropy>=8.0.0",
    "numpy>=2.4.4",
    "pydantic>=2.13.3",
    "scipy>=1.17.1",
    "skyfield>=1.54",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
